# diffusion2d

./: .bashrc  .gitignore  .gitmodules  .pypirc  README.md  call.py  diffusion2d.py  dist.sh  output.py  project.toml  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py  shell.nix  test.py
.github/workflows/: python-build-package.yml  python-publish.yml
CongyPongyPack/: diffusion2d.py  output.py
CongyPongyPack.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aroravi_diffusion2D/: diffusion2d.py  output.py
aroravi_diffusion2D.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
attilaks_diffusion2d/: diffusion2d.py  output.py
bergdola-diffusion2D/: diffusion2d.py
bergdola_diffusion2D/: diffusion2d.py
bergdola_diffusion2D.egg-info/: SOURCES.txt
bhawsina_diffusion2D/bhawsina_diffusion2D/: diffusion2d.py  output.py
bhawsina_diffusion2D/bhawsina_diffusion2D.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
diffusion2d/: Plotter.py  __init__.py  diffusion2d.py  output.py
diffusion2d/bergdola-diffusion2D/: output.py
diffusion2d/bergdola_diffusion2D.egg-info/: PKG-INFO
diffusion2d/output/: output.py
diffusion2d/tarpansa_diffusion2d.egg-info/: PKG-INFO
diffusion2d_cevikma/: diffusion2d.py  output.py
erwerljs_diffusion2D/: diffusion2d.py  output.py
gallyavm-diffusion2d/: diffusion2d.py
herbjs_diffusion2D/: diffusion2d.py  output.py
kuhnmn_diffusion2d/: diffusion2d.py  output.py
kuhnmn_diffusion2d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kujoen-diffusion2d/: output.py
kujoen_diffusion2d/: diffusion2d.py
kurtyisn_diffusion2D/: diffusion2d.py
lacerdar_diffusion2d/: diffusion2d.py  output.py
lacerdar_diffusion2d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lingemkm_diffusion2D/: diffusion2d.py  output.py
lingemkm_diffusion2D.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
marquaml_diffusion2D/: __init__.py  diffusion2d.py  output.py
nadgoucy_diffusion2D/: diffusion2d.py  output.py
nadgoucy_diffusion2D.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
outputs/: output.py
proelstl-diffusion2D/: output.py
schiztn_diffusion2D/: diffusion2d.py  output.py
schiztn_diffusion2D.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: Plotter.py  __init__.py  diffusion2d.py
src/MarkAshraf96_diff_2d.egg-info/: PKG-INFO  SOURCES.txt
src/MarkAshraf96_diffusion2d/: diffusion2d.py  output.py
src/plots/: output.py
strackdiffusion2D/: output.py
strackdiffusion2D.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
strackms-diffusion2D/: diffusion2d.py  output.py
strackms_diffusion2D.egg-info/: PKG-INFO  SOURCES.txt
strackmsdiffusion2D/: diffusion2d.py
strackmsdiffusion2D.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sulaimyr-diffusion2D/: diffusion2d.py  output.py
sumanth0703-diffusion2d/: output.py
sumanth0703_diffusion2d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tarpansa_diffusion2d.egg-info/: PKG-INFO  SOURCES.txt
tuyetltg_diffusion2D/: diffusion2d.py  output.py
tuyetltg_diffusion2D.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
weinhovt_diffusion2D/: output.py
weinhovt_diffusion2D.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
willekeld_diffusion2D.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+20 files in other folders)
