[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "imhoffnsDiffusions2d"
description = "solves the diffusion equation in 2D over a square domain"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.6"
keywords = ["diffusion", "equation"]
license = {text = "BSD License"}
dependencies = []

[project.urls]
homepage = "https://github.com/nils-imhoff/diffusion2d"