[metadata]
name = kujoen_diffusion2d
version = 0.0.4
author = kujoen
url = https://github.com/Kujoen/diffusion2d
description = Diffusion2D made by Kujoen for the SSE lecture
long_description = file: README.md
long-description-content-type = text/markdown 
license_files = LICENSE
classifiers = 
  Programming Language :: Python :: 3

[options]
packages = kujoen_diffusion2d
setup_requires =
  setuptools
install_requires =
  matplotlib