[metadata]
name = wagnerln-diffusion2d
version = attr: src.VERSION
description = Solves the diffusion equation in 2D over a square domain which is at a certain temperature and a circular disc at the center which is at a higher temperature
long_description = file: README.md, LICENSE.md
keywords = diffusion, 2D, particle
url = https://github.com/LitschiW/diffusion2d
license = Creative Commons Attribution 4.0 International
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires =
  numpy
  matplotlib

